--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
                     </h2>
                     <div class="political-bias-bar">
                         <div class="bias-section left" style="width: 30%;">G 30%</div>
-                        <div class="bias-section center" style="width: 50%;">C 50%</</div>
-                        <div class="bias-section right" style="width: 20%;">D 20%</</div>
+                        <div class="bias-section center" style="width: 50%;">C 50%</div>
+                        <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
                     <div class="article-excerpt">
                         <p>The combination of my father's death and my personal background lit a fire in me to know more</p>
@@ -486,9 +486,9 @@
                         <a href="#" class="article-link">The Founder's Guide to Actually Understanding Users Nowadays</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 40%;">G 40%</</div>
-                        <div class="bias-section center" style="width: 40%;">C 40%</</div>
-                        <div class="bias-section right" style="width: 20%;">D 20%</</div>
+                        <div class="bias-section left" style="width: 40%;">G 40%</div>
+                        <div class="bias-section center" style="width: 40%;">C 40%</div>
+                        <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
                     <div class="article-creditation">
                         <p>By Johnathan O'Connell, Andrew Van Dam, Aaron Gregg and Amy Brittain</p>
@@ -504,9 +504,9 @@
                         <a href="#" class="article-link">How 7 Lines of Code Turned Into a $36 Billion Empire</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 20%;">G 20%</</div>
-                        <div class="bias-section center" style="width: 30%;">C 30%</</div>
-                        <div class="bias-section right" style="width: 50%;">D 50%</</div>
+                        <div class="bias-section left" style="width: 20%;">G 20%</div>
+                        <div class="bias-section center" style="width: 30%;">C 30%</div>
+                        <div class="bias-section right" style="width: 50%;">D 50%</div>
                     </div>
                     <div class="article-excerpt">
                         <p>Yeah, it's safe to say these guys have a great sense of humor, which isn't really surprising for us considering their seemingly absurd solution to online payments...</p>
@@ -533,9 +533,9 @@
                         <a href="#" class="article-link">To Become Happier, Ask Yourself These Two Questions Every Night</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 30%;">G 30%</</div>
-                        <div class="bias-section center" style="width: 50%;">C 50%</</div>
-                        <div class="bias-section right" style="width: 20%;">D 20%</</div>
+                        <div class="bias-section left" style="width: 30%;">G 30%</div>
+                        <div class="bias-section center" style="width: 50%;">C 50%</div>
+                        <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
                     <div class="article-creditation">
                         <p>By Jonathan O'Connell</p>
@@ -549,9 +549,9 @@
                         <a href="#" class="article-link">10 Things I Stole From People Smarter Than Me</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 10%;">G 10%</</div>
-                        <div class="bias-section center" style="width: 60%;">C 60%</</div>
-                        <div class="bias-section right" style="width: 30%;">D 30%</</div>
+                        <div class="bias-section left" style="width: 10%;">G 10%</div>
+                        <div class="bias-section center" style="width: 60%;">C 60%</div>
+                        <div class="bias-section right" style="width: 30%;">D 30%</div>
                     </div>
                     <div class="article-creditation">
                         <p>By Jonathan O'Connell</p>
@@ -567,9 +567,9 @@
                         <a href="#" class="article-link">Traveller Visiting Ice Cave With Amazing Eye-Catching Scenes</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 25%;">G 25%</</div>
-                        <div class="bias-section center" style="width: 25%;">C 25%</</div>
-                        <div class="bias-section right" style="width: 50%;">D 50%</</div>
+                        <div class="bias-section left" style="width: 25%;">G 25%</div>
+                        <div class="bias-section center" style="width: 25%;">C 25%</div>
+                        <div class="bias-section right" style="width: 50%;">D 50%</div>
                     </div>
                     <div class="article-excerpt">
                         <p>Slack has become indispensable for many businesses operating remotely during the pandemic. Here's what the acquisition could mean for users...</p>
@@ -594,9 +594,9 @@
                         <a href="#" class="article-link">Things to Do After 6 P.M Will Enrich Your Life</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 40%;">G 40%</</div>
-                        <div class="bias-section center" style="width: 30%;">C 30%</</div>
-                        <div class="bias-section right" style="width: 30%;">D 30%</</div>
+                        <div class="bias-section left" style="width: 40%;">G 40%</div>
+                        <div class="bias-section center" style="width: 30%;">C 30%</div>
+                        <div class="bias-section right" style="width: 30%;">D 30%</div>
                     </div>
                     <div class="article-creditation">
                         <p>Apple Podcasts, Google Podcasts, Stitcher</p>
@@ -627,9 +627,9 @@
                         <a href="#" class="article-link">The First Signs of Alcoholic Liver Damage Are Not in the Liver</a>
                     </h2>
                     <div class="political-bias-bar">
-                        <div class="bias-section left" style="width: 30%;">G 30%</</div>
-                        <div class="bias-section center" style="width: 50%;">C 50%</</div>
-                        <div class="bias-section right" style="width: 20%;">D 20%</</div>
+                        <div class="bias-section left" style="width: 30%;">G 30%</div>
+                        <div class="bias-section center" style="width: 50%;">C 50%</div>
+                        <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
                     <div class="content">
                         <div class="text">
