--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perspectiv</title>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fraunces:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fraunces:wght@500;600;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@600&display=swap" rel="stylesheet"> <!-- Polices originales ajoutées -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fraunces:ital,wght@0,500;0,600;0,700;1,600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fraunces:ital,wght@0,500;0,600;0,700;1,600&family=Roboto:wght@700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@600&display=swap'); /* Polices originales */
 
         *,
         *:after,
@@ -300,9 +302,9 @@
         }
 
         .magazine-layout {
-            margin-top: 8rem;
+            margin-top: 4rem;
             display: grid;
-            grid-template-columns: 1fr 2fr 1fr;
+            grid-template-columns: 1fr auto 2fr auto 1fr;
             grid-gap: 2rem;
             max-width: 1900px;
             margin: 0 auto;
@@ -323,12 +325,25 @@
             width: 1px;
             background-color: #E5E7EB;
             height: 100%;
-            margin: 0 2rem;
+        }
+
+        .horizontal-separator {
+            width: 140%; /* Allongement des séparations horizontales à gauche et à droite */
+            height: 1px;
+            background-color: #E5E7EB;
+            margin: 0.5rem -20%; /* Réduction de l'espace entre l'image et la séparation et allongement vers la gauche */
+        }
+
+        .section-title {
+            font-size: 2rem;
+            font-weight: 700;
+            font-family: 'Roboto', sans-serif;
+            margin-bottom: 1rem;
         }
 
         .article-title {
             font-family: "Fraunces", serif;
-            font-weight: 900;
+            font-weight: 600;
             line-height: 1.25;
             color: #E5E7EB;
         }
@@ -411,7 +426,7 @@
         .political-bias-bar {
             display: flex;
             align-items: center;
-            height: 20px;
+            height: 18px;
             margin: 10px 0;
             border-radius: 2px;
             overflow: hidden;
@@ -423,7 +438,7 @@
             align-items: center;
             color: #111827;
             font-weight: bold;
-            font-size: 0.8rem;
+            font-size: 0.7rem;
         }
 
         .political-bias-bar .left {
@@ -458,7 +473,10 @@
             border-radius: 8px;
             margin: 0 auto;
             width: 100%;
-            margin-top: 2rem;
+            margin-top: 1rem;
+            opacity: 0;
+            position: absolute;
+            transition: opacity 1s;
         }
 
         .single-article img {
@@ -486,7 +504,7 @@
         }
 
         .small-article {
-            width: 100%;
+            width: 80%;
             background-color: #1a1a2e;
             padding: 1rem;
             border-radius: 8px;
@@ -496,13 +514,22 @@
         .small-article img {
             width: 100%;
             height: auto;
-            margin-bottom: 1rem;
+            margin-bottom: 0.25rem; /* Réduction de l'espace entre le bas de l'image et la séparation horizontale */
         }
 
         .small-article .article-title {
             font-size: 1.25rem;
             margin-top: 0.5rem;
             color: #E5E7EB;
+        }
+
+        /* Styles pour les nouveaux titres */
+        .section-title--blindspot {
+            font-family: 'Playfair Display', serif;
+        }
+
+        .section-title--france {
+            font-family: 'Raleway', sans-serif;
         }
     </style>
 </head>
@@ -547,6 +574,7 @@
         <!-- Actu du Jour Section -->
         <div id="actu-du-jour" class="magazine-layout">
             <div class="magazine-column">
+                <h2 class="section-title section-title--blindspot">•BlindSpot•</h2>
                 <article class="small-article">
                     <figure>
                         <img src="https://placehold.co/300x200" alt="Image de l'article" />
@@ -559,6 +587,7 @@
                         <div class="bias-section center" style="width: 50%;">C 50%</div>
                         <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
+                    <div class="horizontal-separator"></div>
                 </article>
                 <article class="small-article">
                     <figure>
@@ -572,8 +601,10 @@
                         <div class="bias-section center" style="width: 50%;">C 50%</div>
                         <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
+                    <div class="horizontal-separator"></div>
                 </article>
             </div>
+            <div class="vertical-separator"></div>
             <div class="magazine-column">
                 <article class="single-article">
                     <figure>
@@ -607,8 +638,41 @@
                         </div>
                     </div>
                 </article>
+                <article class="single-article">
+                    <figure>
+                        <img src="https://placehold.co/1000x450" alt="Image de l'article" />
+                    </figure>
+                    <h2 class="article-title article-title--large">
+                        <a href="#" class="article-link">Second Article Title</a>
+                    </h2>
+                    <div class="political-bias-bar">
+                        <div class="bias-section left" style="width: 30%;">G 30%</div>
+                        <div class="bias-section center" style="width: 50%;">C 50%</div>
+                        <div class="bias-section right" style="width: 20%;">D 20%</div>
+                    </div>
+                    <div class="content">
+                        <div class="text">
+                            <div class="article-excerpt">
+                                <p>Excerpt of the second article.</p>
+                            </div>
+                            <div class="article-author">
+                                <div class="article-author-img">
+                                    <img src="https://placehold.co/40x40" alt="Author Name" />
+                                </div>
+                                <div class="article-author-info">
+                                    <dl>
+                                        <dt>Author Name</dt>
+                                        <dd>Reporter</dd>
+                                    </dl>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </div>
+            <div class="vertical-separator"></div>
             <div class="magazine-column">
+                <h2 class="section-title section-title--blindspot">•France•</h2>
                 <article class="small-article">
                     <figure>
                         <img src="https://placehold.co/300x200" alt="Image de l'article" />
@@ -621,6 +685,7 @@
                         <div class="bias-section center" style="width: 50%;">C 50%</div>
                         <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
+                    <div class="horizontal-separator"></div>
                 </article>
                 <article class="small-article">
                     <figure>
@@ -634,6 +699,7 @@
                         <div class="bias-section center" style="width: 50%;">C 50%</div>
                         <div class="bias-section right" style="width: 20%;">D 20%</div>
                     </div>
+                    <div class="horizontal-separator"></div>
                 </article>
             </div>
         </div>
@@ -687,6 +753,22 @@
             toggleClass(this, 'on');
             return false;
         }
+
+        $(document).ready(function() {
+            var articles = $(".single-article");
+            var index = 0;
+
+            function showNextArticle() {
+                articles.eq(index).fadeOut(1000, function() {
+                    index = (index + 1) % articles.length;
+                    articles.eq(index).fadeIn(1000);
+                });
+            }
+
+            articles.hide();
+            articles.eq(index).show();
+            setInterval(showNextArticle, 15000);
+        });
     </script>
 </body>
 </html>
