--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
             <input type="search" class="search" placeholder="Rechercher...">
         </div>
         <div class="header-right">
-            <a href="#" class="header-link header-link--button">Get 1 year for $50 USD</a>
+            <a href="#" class="header-link header-link--button">NewsLetter</a>
             <a href="#" class="header-link">Login</a>
         </div>
     </header>
